# CLIP-Distillation

./: pyproject.toml
embed-KD-model/: events.out.tfevents.1774150577.vis-lab.236468.0  events.out.tfevents.1774150641.vis-lab.237686.0  events.out.tfevents.1774151082.vis-lab.241872.0  events.out.tfevents.1774152626.vis-lab.254859.0
scripts/: train_google_vit-base-patch16-224-in21k_CIFAR100_embed-KD.sh  train_google_vit-base-patch16-224-in21k_CIFAR100_teacher-KD.sh  train_google_vit-base-patch16-224-in21k_CIFAR100_vanilla.sh  train_google_vit-base-patch16-224-in21k_CIFAR10_embed-KD.sh  train_google_vit-base-patch16-224-in21k_CIFAR10_teacher-KD.sh  train_google_vit-base-patch16-224-in21k_CIFAR10_vanilla.sh  train_google_vit-base-patch16-224-in21k_Imagenet_embed-KD.sh  train_google_vit-base-patch16-224-in21k_Imagenet_teacher-KD.sh  train_google_vit-base-patch16-224-in21k_Imagenet_vanilla.sh  train_google_vit-base-patch32-224-in21k_CIFAR100_embed-KD.sh  train_google_vit-base-patch32-224-in21k_CIFAR100_teacher-KD.sh  train_google_vit-base-patch32-224-in21k_CIFAR100_vanilla.sh  train_google_vit-base-patch32-224-in21k_CIFAR10_embed-KD.sh  train_google_vit-base-patch32-224-in21k_CIFAR10_teacher-KD.sh  train_google_vit-base-patch32-224-in21k_CIFAR10_vanilla.sh  train_google_vit-base-patch32-224-in21k_Imagenet_embed-KD.sh  train_google_vit-base-patch32-224-in21k_Imagenet_teacher-KD.sh  train_google_vit-base-patch32-224-in21k_Imagenet_vanilla.sh  train_google_vit-large-patch16-224-in21k_CIFAR100_embed-KD.sh  train_google_vit-large-patch16-224-in21k_CIFAR100_teacher-KD.sh  (+16 more)
