[project]
name = "clip-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.8.4",
    "Pillow==10.3.0",
    "scikit-learn==1.4.2",
    "tensorboard==2.16.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.66.4",
    "transformers==4.39.3",
]
