[project]
name = "clip-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "Pillow==10.3.0",
    "scikit-learn==1.4.2",
    "tensorboard==2.16.2",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.66.4",
    "transformers==4.39.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
